opam-version: "2.0"
maintainer: "florent.hivert@lisn.fr"
version: "dev"

homepage: "https://github.com/hivert/mc-nix-ci"
dev-repo: "git+https://github.com/hivert/mc-nix-ci.git"
license: "MIT"

synopsis: "Test of ci with docker-coq-action"
description: """
Test of ci with docker-coq-action.
"""

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]

run-test: []

depends: [
  "ocaml" {>= "4.05.0"}
  "coq" {(>= "8.20") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "2.4.0")}
]

tags: [
]
authors: [
  "Florent Hivert"
]
