opam-version: "2.0"
maintainer: "florent.hivert@lisn.fr"
version: "dev"

homepage: "https://github.com/hivert/mc-nix-ci"
dev-repo: "git+https://github.com/hivert/mc-nix-ci.git"
bug-reports: "https://github.com/hivert/mc-nix-ci/issues"
license: "MIT"

synopsis: "Test of ci with docker-coq-action"
description: """
Test of ci with docker-coq-action.
"""

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]

run-test: []

depends: [
  "ocaml" {>= "4.05.0"}
  "rocq-core" {(>= "9.0") | (= "dev")}
  "rocq-mathcomp-ssreflect" {(>= "2.5.0")}
  "rocq-native"
]

tags: [
]
authors: [
  "Florent Hivert"
]
